--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*app variables*/
+
+:root {
+  /* font */
+  --main-font: 'Orbitron', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/*app CSS reset*/
+
+body,
+div,
+p {
+  margin: 0;
+  padding: 0;
 }
